--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ factory-boy = "==2.12.0"
 [packages]
 django = "*"
 djangorestframework = "*"
-djangorestframework-api-key = "*"
+PyJWT = "==2.1.0"
 
 [requires]
 python_version = "3.9"
